# cpp-hw5

./: .gitignore  CMakeLists.txt  Doxyfile.in  GenDocs.bat  README.md
.github/workflows/: docs.yml  release.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  Doxygen.cmake  Packaging.cmake
tests/: CMakeLists.txt  gtest_print_ip.cpp
